--- a/Mappings/DuringConferenceTemplates/sequence.yaml
+++ b/Mappings/DuringConferenceTemplates/sequence.yaml
@@ -1,6 +1,6 @@
-sequentialtemplates_duringconference:
+templates:
 - template_name: ResearchGroupPapers
-  placeholder: Author
+  account_type: PersonAccount
   min_duration: 3
   max_duration: 3.5
   frequency: 0.5
@@ -8,7 +8,7 @@ sequentialtemplates_duringconference:
     Our research group, [Affiliation], is thrilled to present [n] papers titled [Paper1, Paper2, …] at [Conference] this year. We're excited to share our insights and discoveries with the academic community! [Author]
 
 - template_name: InteractivePanelSession
-  placeholder: Panelists
+  account_type: PersonAccount
   min_duration: 2
   max_duration: 4
   frequency: 0.3
@@ -16,7 +16,7 @@ sequentialtemplates_duringconference:
     Get ready for an interactive panel session at [Conference]. Our panelists, [Panelists], will share their expertise on [Topic]. Don't miss this opportunity to gain valuable insights and ask your burning questions. See you there!
 
 - template_name: InteractiveSessionReminder
-  placeholder: Speaker
+  account_type: PersonAccount
   min_duration: 2
   max_duration: 4
   frequency: 0.3
@@ -24,7 +24,7 @@ sequentialtemplates_duringconference:
     Ready to participate? Our interactive session on [Topic] is just around the corner at [Time]. Bring your questions, ideas, and enthusiasm for a lively discussion with [Speaker]. Let's make this session engaging and insightful!
 
 - template_name: StudentPresentation
-  placeholder: Person
+  account_type: PersonAccount
   min_duration: 2
   max_duration: 3
   frequency: 0.4
@@ -32,7 +32,7 @@ sequentialtemplates_duringconference:
     Exciting news! My student, [Person], will be representing our team by presenting our work titled [PaperTitle] at [Conference]. Join us in supporting their presentation [Coauthor1, Coauthor2, …]. [Presenter]
 
 - template_name: PresenterAnnouncement
-  placeholder: Person
+  account_type: PersonAccount
   min_duration: 2
   max_duration: 3
   frequency: 0.4
